<resources>
    <string name="app_name">Hangover kitchen conversation</string>

    <string name="hint_email">e-mail</string>
    <string name="hint_pass">pass</string>
    <string name="content_description">content description</string>

    <!-- Login -->
    <string name="login_btn">Войти</string>
    <string name="login_btn_forgot_pass">Забыли пароль?</string>

    <!-- Register -->
    <string name="register_btn">Зарегистрироваться</string>
    <string name="register_continue">Продолжить</string>
    <string name="register_name_hint_text">Имя</string>
    <string name="register_hint_description_text">Описание</string>
    <string name="login_btn_register">Зарегистрироваться</string>

    <!-- Rooms -->
    <string name="item_room_participant_limit_format"> %1$d | %2$d</string>
    <string name="item_room_participant_no_limit_format"> %1$d</string>

    <!-- Create Room -->
    <string name="create_room_title_hint_text">Название</string>
    <string name="create_room_description_hint_text">Описание</string>
    <string name="create_room_is_open_hint_text">Открына?</string>
    <string name="create_room_can_anonim_message_hint_text">Можно отправлять анонимные сообщения?</string>
    <string name="create_room_limit_hint_text">Лимин участников</string>
    <string name="create_room_btn_create_text">Создать комнату</string>

</resources>